# note-app

./: .env.example  .gitignore  ACCOUNTS_INFO.md  DELIVERY_GUIDE.md  Dockerfile  Makefile  PROJECT_PROGRESS.md  QA_FINAL_REPORT.md  QA_STANDARDS.md  README.md  SPRINT_PLANNING.md  TASK_BOARD.md  TEAM_COLLABORATION.md  acceptance_test.py  deploy.sh  docker-compose.yml  quick_acceptance_test.py  self_test.py  self_test_report.json  start_noteai.py  test_backend_qa.py  test_frontend_qa.py
.bmad-core/: install-manifest.yaml
docs/: architecture.md  bmad-fragmentation-summary.md  prd.md  project-brief.md  quality-check-report.md  technical-implementation.md  ux-design.md
docs/architecture/: ai-service-architecture.md  architecture-fragmentation-summary.md  note-service-architecture.md  user-service-architecture.md
docs/epics/: epic-1-intelligent-note-creation.md
docs/qa/: epic-1-qa-strategy.md
docs/stories/: story-1-1-1-basic-text-optimization.md  story-1-1-2-smart-continuation.md  story-1-2-1-auto-classification.md
noteai/: .env.example  README.md  complete_user_service.py  docker-compose.dev.yml  fixed_start_services.py  init_admin.py  noteai.db  noteai.db-shm  noteai.db-wal  pyproject.toml  real_ai_service.py  requirements.txt  run_ai_service.py  run_user_service.py  simple_note_service.py  simple_start.py  start_services.py  test_basic.py  test_complete_auth.py  test_database.py  test_note_service.py  test_real_ai_service.py  test_running_services.py  test_user_service.py  unified_backend_service.py
noteai-frontend/: Dockerfile  craco.config.js  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.json
noteai-frontend/public/: index.html  manifest.json
noteai-frontend/src/: App.tsx  index.css
noteai-frontend/src/components/: FeedbackEditModal.tsx  FeedbackForm.tsx  FeedbackList.tsx  Header.tsx  Layout.tsx  ProtectedRoute.tsx  Sidebar.tsx
noteai-frontend/src/components/ui/: Button.tsx  Card.tsx  Input.tsx
noteai-frontend/src/contexts/: AuthContext.tsx
noteai-frontend/src/pages/: AITools.tsx  Dashboard.tsx  Feedback.tsx  Login.tsx  NoteEditor.tsx  Notes.tsx  Profile.tsx  Register.tsx  Settings.tsx
noteai-frontend/src/services/: api.ts
noteai-frontend/src/types/: index.ts
noteai/database/: connection.py  models.py  repositories.py
noteai/scripts/: start-dev.sh  start-local.sh
noteai/services/: auth_service.py
noteai/services/ai_service/: __init__.py  autogen_service.py  cache_manager.py  main.py  quota_manager.py
noteai/services/ai_service/agents/: __init__.py  content_classifier.py  text_optimizer.py
noteai/services/note_service/: __init__.py  main.py
noteai/services/user_service/: __init__.py  database.py  main.py  models.py  schemas.py
noteai/shared/: __init__.py
noteai/shared/config/: settings.py
noteai/shared/models/: base.py
noteai/shared/utils/: auth.py
noteai/utils/: logger.py
usage/: 01-BMad-Method简介.md  02-系统架构概览.md  03-环境准备与安装.md  04-AI代理系统.md  05-工作流程详解.md  06-快速开始指南.md  README.md  中文教程大纲.md  命令参考手册.md  常见问题解答.md
